# lit-bls-wasm

./: .gitignore  Cargo.toml  LICENSE  README.md  build.sh
.github/: CODEOWNERS
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: wasm.yml
convertWasmToJs/: bls-sdk.js  convert.js  convert_wasm_to_js.py
scripts/: tests.sh
src/: lib.rs
tests/: wasm.rs
