[package]
authors = ["Mike <mike@litprotocol.com>"]
name = "lit-bls-wasm"
version = "0.2.0"
edition = "2021"
homepage = "https://github.com/LIT-Protocol/lit-bls-wasm"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
blsful = {  version = "3.0.0-pre8", default-features = false, features = ["rust"] }
blsful2 = { version = "2.5.7", package = "blsful", default-features = false, features = ["rust"] }
console_error_panic_hook = "0.1"
base64_light = "0.1"
getrandom = { version = "0.2", features = ["js"] }
hex = "0.4"
serde = "1.0"
serde_json = "1.0"
serde_bare = "0.5"
serde-wasm-bindgen = "0.6"
wasm-bindgen = "0.2"

[profile.release]
debug = false
lto = true
opt-level = "z"

[dev-dependencies]
ciborium = "0.2"
k256 = "0.13"
rand = "0.8"
rand_chacha = "0.3"
wasm-bindgen-test = "0.3"
